--- a/sass/information.scss
+++ b/sass/information.scss
@@ -16,13 +16,16 @@
   .telefonoLugar {
     color: #3a3333;
     margin: 25px;
+    font-weight: 700;
   }
   
   .correoLugar {
     color: #3a3333;
+    font-weight: 700;
   }
   
   .ubicacionLugar {
     color: #3a3333;
     margin: 25px;
+    font-weight: 700;
   }
