--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,68 @@
   padding: 20px;
   margin-left: 10px; }
 
+form {
+  background-color: #3a3333;
+  border-radius: 3px;
+  color: #999;
+  font-size: 0.85em;
+  padding: 20px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left; }
+
+input, textarea {
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  resize: none;
+  width: 50%; }
+
+textarea {
+  height: 120px; }
+
+.contactoImagen {
+  position: absolute;
+  width: 49%;
+  left: 51%;
+  bottom: 10vh; }
+
+.field {
+  border: solid 1px #ccc;
+  padding: 10px; }
+
+.field:focus {
+  border-color: #000000; }
+
+.center-content {
+  text-align: center; }
+
+.inputContacto {
+  color: #3a3333;
+  padding: 15px 30px;
+  font-size: 15px;
+  font-weight: 600;
+  border: none;
+  background-color: #FFD25A;
+  cursor: pointer;
+  box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  border-radius: 5px; }
+
+.inputContacto:hover {
+  color: #000000;
+  background-color: #be9c44;
+  transition: all ease-in-out 600ms; }
+
+.buttonContacto {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 600px;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+
 /* ----------- ENCUESTA & CONTACTO TEXTAREA ------------- */
 .textArea textarea {
   resize: none; }
@@ -110,14 +172,17 @@ body {
 
 .telefonoLugar {
   color: #3a3333;
-  margin: 25px; }
+  margin: 25px;
+  font-weight: 700; }
 
 .correoLugar {
-  color: #3a3333; }
+  color: #3a3333;
+  font-weight: 700; }
 
 .ubicacionLugar {
   color: #3a3333;
-  margin: 25px; }
+  margin: 25px;
+  font-weight: 700; }
 
 /* ---------- MENU -------- */
 .hamburguesaMenu {
@@ -599,3 +664,55 @@ a .logoPagina {
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.42);
   text-overflow: ellipsis !important;
   color: white !important; }
+
+/* -------------------- ERROR 404 ------------------- */
+.contenedorError {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center; }
+
+.imgError {
+  width: 100%;
+  height: 100%; }
+
+.h1Error {
+  color: #6F5F52;
+  position: absolute;
+  margin-top: 320px; }
+
+button {
+  background: none;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+a {
+  color: #6F5F52;
+  font-weight: 800; }
+
+a:active {
+  color: #000000; }
+
+.botonError {
+  padding: 15px 30px;
+  border-radius: 15px;
+  border: none;
+  background-color: #FFD25A;
+  position: absolute;
+  margin-top: 470px;
+  cursor: pointer;
+  box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.2); }
+
+.botonError:hover {
+  background-color: #dab24e;
+  transition: all 600ms ease-out; }
+
+.inicioError {
+  text-decoration: none;
+  border: none;
+  right: 420px; }
