--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,18 @@ textarea {
   background-color: #be9c44;
   transition: all ease-in-out 600ms; }
 
+@media screen and (max-width: 600px) {
+  input, textarea {
+    border: 0;
+    border-radius: 5px;
+    outline: none;
+    resize: none;
+    width: 100%;
+    background-image: url(../images/contacto.svg);
+    background-size: auto; }
+  .contactoImagen {
+    display: none; } }
+
 /* ----------- ENCUESTA & CONTACTO TEXTAREA ------------- */
 .textArea textarea {
   resize: none; }
@@ -106,6 +118,10 @@ textarea {
 
 footer {
   background-color: #3a3333; }
+
+@media screen and (max-width: 600px) {
+  .rightsReserved {
+    font-size: 0.9rem; } }
 
 /* ---------- GENERAL ---------- */
 header {
@@ -186,6 +202,10 @@ body {
   color: #3a3333;
   margin: 25px;
   font-weight: 700; }
+
+@media screen and (max-width: 600px) {
+  .informacionAdicional {
+    font-size: 0.9rem; } }
 
 /* ---------- MENU -------- */
 .hamburguesaMenu {
@@ -279,38 +299,10 @@ body {
   grid-template-columns: repeat(3, 1fr);
   /*                        */ }
 
-/* MENU BEBIDAS */
-.baconCheese .figureBebidas {
-  position: relative;
-  left: 420px;
-  margin: 30px;
-  width: 485px;
-  height: 380px; }
-
-.baconCheese figure .imgBebidas {
-  height: 380px;
-  width: 515px;
-  position: relative;
-  right: 1.05rem; }
-
-.baconCheese .figureBebidas:hover > .descriptionBurguer h3 {
-  margin-top: 140px;
-  margin-bottom: 35px; }
-
-.baconCheese .figureBebidas .descriptionBurguer h3 {
-  color: #fff;
-  font-weight: 700;
-  margin-bottom: 40px;
-  -webkit-transition: all 500ms ease-out;
-  transition: all 500ms ease-out; }
-
-.baconCheese .figureBebidas .descriptionBurguer p {
-  color: #fff;
-  font-weight: 300; }
-
-.baconCheese .figureBebidas:hover > img {
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05); }
+@media screen and (max-width: 600px) {
+  .baconCheese figure img {
+    height: 11.8rem;
+    width: 23rem; } }
 
 /* ------------------------ NAV ------------------------ */
 .menu {
@@ -410,12 +402,12 @@ body {
   .sub-menu .menu-item {
     background: #3a3333; }
   figure {
-    width: 200px !important;
-    height: 200px !important;
-    display: -ms-grid !important;
-    display: grid !important;
-    -ms-grid-column: 6 !important;
-    grid-column: 6 !important;
+    width: 200px;
+    height: 200px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-column: 6;
+    grid-column: 6;
     right: 67px; }
   figure > img {
     padding-right: 90px !important; }
@@ -483,7 +475,10 @@ body {
   .menu:hover > ol {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    width: 100%; }
   .menu:hover:after {
     -webkit-box-shadow: none;
     box-shadow: none; } }
@@ -501,7 +496,7 @@ body {
 
 @media screen and (max-width: 600px) {
   .sub-menu {
-    width: 100vw;
+    width: 96.6vw;
     left: -2rem;
     top: 50%;
     -webkit-transform: translateY(-50%);
@@ -620,6 +615,19 @@ a .logoPagina {
 .iframeMapa {
   width: 100%;
   height: 450px; }
+
+@media screen and (max-width: 600px) {
+  .nosotrosImagen figure {
+    left: 100px;
+    width: 100%; }
+  .nosotrosImagen figure img {
+    height: 100%;
+    width: 200%; }
+  .nosotrosImagen figure:hover > .descriptionBurguer h3 {
+    margin: auto;
+    font-size: auto; }
+  .nosotrosImagen figure .descriptionBurguer p {
+    font-size: auto; } }
 
 /* ----------------------- SOCIAL BAR ICONS ------------------------- */
 .socialBar {
