--- a/sass/contacto.scss
+++ b/sass/contacto.scss
@@ -94,3 +94,17 @@ form{
     transition: all ease-in-out 600ms;
   }
 
+  @media screen and (max-width: 600px){
+    input, textarea{
+			border: 0;
+      border-radius: 5px;
+			outline: none;
+      resize: none;
+			width: 100%;
+      background-image: url(../images/contacto.svg);
+      background-size: auto;
+    }
+    .contactoImagen{
+      display: none;
+    }
+  }
