--- a/sass/information.scss
+++ b/sass/information.scss
@@ -29,3 +29,9 @@
     margin: 25px;
     font-weight: 700;
   }
+
+  @media screen and (max-width: 600px){
+    .informacionAdicional{
+      font-size: 0.9rem;
+    }
+  }
