--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -59,7 +59,7 @@
 .menu-item a {
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis !important;
+  text-overflow: ellipsis;
   display: block;
   color: #000 !important;
   font-weight: 600;
@@ -145,8 +145,6 @@
     -webkit-box-shadow: 0 10px #FFF, 0 -10px #FFF;
             box-shadow: 0 10px #FFF, 0 -10px #FFF;
     z-index: 1;
-    cursor: pointer;
-            
   }
   .menu > ol {
     display: none;
@@ -240,6 +238,7 @@
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
+    width: 120%;
   }
   .logoPagina {
     left: 4rem;
@@ -271,21 +270,23 @@ a {
 @-webkit-keyframes enter {
   from {
     opacity: 0;
-    -webkit-transform: scaleY(0.98) translateY(10px);
-            transform: scaleY(0.98) translateY(10px);
+    -webkit-transform: scaleY(0.50) translateY(10px);
+            transform: scaleY(0.50) translateY(10px);
   }
   to {
     opacity: 1;
     -webkit-transform: none;
             transform: none;
   }
+
 }
 
 @keyframes enter {
   from {
     opacity: 0;
-    -webkit-transform: scaleY(0.98) translateY(10px);
-            transform: scaleY(0.98) translateY(10px);
+    -webkit-transform: scaleY(0.38) translateY(3px);
+            transform: scaleY(0.38) translateY(3px);
+            animation-delay: 500ms;
   }
   to {
     opacity: 1;
