--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ body {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    height: 122vh;
+    height: 101vh;
     -webkit-animation: fade 0.2s ease-out;
     animation: fade 0.2s ease-out; }
   .menu > ol > .menu-item {
@@ -493,7 +493,6 @@ body {
   position: absolute;
   width: 100%;
   top: 100%;
-  left: 0;
   display: none;
   z-index: 1; }
 
@@ -507,7 +506,8 @@ body {
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    width: 120%; }
+    width: 120%;
+    position: relative; }
   .logoPagina {
     left: 4rem;
     padding-bottom: 20px; } }
@@ -532,8 +532,8 @@ a {
 @-webkit-keyframes enter {
   from {
     opacity: 0;
-    -webkit-transform: scaleY(0.5) translateY(10px);
-    transform: scaleY(0.5) translateY(10px); }
+    -webkit-transform: scaleY(0.98) translateY(10px);
+    transform: scaleY(0.98) translateY(10px); }
   to {
     opacity: 1;
     -webkit-transform: none;
@@ -542,9 +542,8 @@ a {
 @keyframes enter {
   from {
     opacity: 0;
-    -webkit-transform: scaleY(0.38) translateY(3px);
-    transform: scaleY(0.38) translateY(3px);
-    animation-delay: 500ms; }
+    -webkit-transform: scaleY(0.68) translateY(3px);
+    transform: scaleY(0.68) translateY(3px); }
   to {
     opacity: 1;
     -webkit-transform: none;
