--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,11 @@ body {
   height: 200px; }
 
 .carouselImage {
-  width: 100%; }
+  width: 100%;
+  height: 47rem; }
+
+.carousel-inner {
+  height: 47rem; }
 
 /* ----------------- INFORMATION ----------------- */
 .informacionAdicional {
@@ -506,8 +510,7 @@ body {
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    width: 120%;
-    position: relative; }
+    width: 120%; }
   .logoPagina {
     left: 4rem;
     padding-bottom: 20px; } }
