--- a/sass/information.scss
+++ b/sass/information.scss
@@ -1,6 +1,6 @@
 /* ----------------- INFORMATION ----------------- */
 .informacionAdicional {
-    background-color: #FF785A;
+    background-color: #FFD25A;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
