--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
 
 /* ----------------- INFORMATION ----------------- */
 .informacionAdicional {
-  background-color: #FF785A;
+  background-color: #FFD25A;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -309,276 +309,90 @@ body {
     height: 11.8rem;
     width: 23rem; } }
 
-/* ------------------------ NAV ------------------------ */
-.menu {
-  background: #FFD25A;
-  height: 4rem;
-  position: relative; }
-
-.menu ol {
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-  font-weight: 600; }
-
-.menu > ol {
-  max-width: 1000px;
-  padding: 0 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.menu > ol > .menu-item {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  padding: 0.75rem 0; }
-
-.menu > ol > .menu-item:after {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  bottom: 5px;
-  left: calc(50% - 2px);
-  background: #3a3333;
-  will-change: transform;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-  -webkit-transition: -webkit-transform 0.2s ease;
-  transition: -webkit-transform 0.2s ease;
-  transition: transform 0.2s ease;
-  transition: transform 0.2s ease, -webkit-transform 0.2s ease; }
-
-.menu > ol > .menu-item:hover:after {
-  -webkit-transform: scale(1);
-  transform: scale(1); }
-
-.menu-item {
-  position: relative;
-  line-height: 2.5rem;
-  text-align: center; }
-
-.menu-item a {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  display: block;
-  color: #000 !important;
-  font-weight: 600;
-  cursor: pointer; }
-
-.sub-menu .menu-item {
-  padding: 0.75rem 0;
-  background: #FFD25A;
-  opacity: 0;
-  -webkit-transform-origin: bottom;
-  transform-origin: bottom;
-  -webkit-animation: enter 0.2s ease forwards;
-  animation: enter 0.2s ease forwards;
-  cursor: pointer; }
-
-.sub-menu .menu-item:nth-child(1) {
-  -webkit-animation-duration: 0.2s;
-  animation-duration: 0.2s;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s; }
-
-.sub-menu .menu-item:nth-child(2) {
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-delay: 0.1s;
-  animation-delay: 0.1s; }
-
-.sub-menu .menu-item:nth-child(3) {
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-delay: 0.2s;
-  animation-delay: 0.2s; }
-
-.sub-menu .menu-item:hover {
-  background: #3a3333; }
-
-.sub-menu .menu-item a {
-  padding: 0 0.75rem; }
-
-@media screen and (max-width: 576px) {
-  .sub-menu .menu-item {
-    background: #3a3333; }
-  figure {
-    width: 200px;
-    height: 200px;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-column: 6;
-    grid-column: 6;
-    right: 67px; }
-  figure > img {
-    padding-right: 90px !important; }
-  .descriptionBurguer > h3 {
-    font-size: 17px; }
-  .descriptionBurguer > p {
-    font-size: 14px; } }
-
-@media screen and (max-width: 576px) {
-  .menu {
-    display: block; }
-  .menu:after {
-    content: "";
-    position: absolute;
-    top: calc(50% - 2px);
-    right: 1rem;
-    width: 30px;
-    height: 4px;
-    background: #FFF;
-    -webkit-box-shadow: 0 10px #FFF, 0 -10px #FFF;
-    box-shadow: 0 10px #FFF, 0 -10px #FFF;
-    z-index: 1; }
-  .menu > ol {
-    display: none;
-    background: #FFD25A;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    height: 101vh;
-    -webkit-animation: fade 0.2s ease-out;
-    animation: fade 0.2s ease-out; }
-  .menu > ol > .menu-item {
-    -webkit-box-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
-    opacity: 0;
-    -webkit-animation: enter 0.3s ease-out forwards;
-    animation: enter 0.3s ease-out forwards; }
-  .menu > ol > .menu-item:nth-child(1) {
-    -webkit-animation-delay: 0s;
-    animation-delay: 0s; }
-  .menu > ol > .menu-item:nth-child(2) {
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s; }
-  .menu > ol > .menu-item:nth-child(3) {
-    -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s; }
-  .menu > ol > .menu-item:nth-child(4) {
-    -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s; }
-  .menu > ol > .menu-item:nth-child(5) {
-    -webkit-animation-delay: 0.4s;
-    animation-delay: 0.4s; }
-  .menu > ol > .menu-item + .menu-item {
-    margin-top: 0.75rem; }
-  .menu > ol > .menu-item:after {
-    left: auto;
-    right: 1rem;
-    bottom: calc(50% - 2px); }
-  .menu > ol > .menu-item:hover {
-    z-index: 1; }
-  .menu:hover > ol {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    z-index: 1;
-    width: 100%; }
-  .menu:hover:after {
-    -webkit-box-shadow: none;
-    box-shadow: none; }
-  .carousel-indicators, .carousel-control-prev-icon,
-  .carousel-control-next {
-    display: none;
-    visibility: hidden; } }
-
-.sub-menu {
-  position: absolute;
-  width: 100%;
-  top: 100%;
-  display: none;
-  z-index: 1; }
-
-.menu-item:hover > .sub-menu {
-  display: block; }
-
-@media screen and (max-width: 576px) {
-  .sub-menu {
-    width: 96.6vw;
-    left: -2rem;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 120%; }
-  .logoPagina {
-    left: 4rem;
-    padding-bottom: 20px; } }
-
-html, body {
-  font-size: 17px;
-  font-family: "Glory", monospace;
-  margin: 0;
-  background: #3a3333; }
-
 * {
-  -webkit-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box; }
 
-*:before, *:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit; }
+html {
+  font-size: 66.5%;
+  font-family: 'Glory', sans-serif; }
+
+li {
+  list-style: none; }
 
 a {
-  text-decoration: none !important; }
+  text-decoration: none; }
 
-@-webkit-keyframes enter {
-  from {
-    opacity: 0;
-    -webkit-transform: scaleY(0.98) translateY(10px);
-    transform: scaleY(0.98) translateY(10px); }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none; } }
+.header {
+  border-bottom: 1px solid #E2E8F0; }
 
-@keyframes enter {
-  from {
-    opacity: 0;
-    -webkit-transform: scaleY(0.68) translateY(3px);
-    transform: scaleY(0.68) translateY(3px); }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none; } }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem; }
 
-@-webkit-keyframes fade {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
+.hamburger {
+  display: none; }
 
-@keyframes fade {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #3a3333;
+  z-index: 4;
+  position: relative; }
 
-a .logoPagina {
-  width: 200px;
-  position: relative;
-  right: 200px;
-  margin-top: 6px; }
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%; }
 
-@media screen and (max-width: 1920px) {
-  a .logoPagina {
-    position: relative;
-    right: 10rem; } }
+.nav-item {
+  margin-left: 5rem; }
 
-@media screen and (max-width: 768px) {
-  a .logoPagina {
-    position: relative;
-    right: 10rem; } }
+.nav-link {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #3a3333 !important; }
+
+.nav-link:hover {
+  color: #3a3333; }
+
+@media only screen and (max-width: 768px) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 0rem;
+    flex-direction: column;
+    background-color: #FFD25A;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    z-index: 3; }
+  .nav-menu.active {
+    left: 0; }
+  .nav-item {
+    margin: 2.5rem 0; }
+  .hamburger {
+    display: block;
+    cursor: pointer; } }
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0; }
+
+.hamburger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg); }
+
+.hamburger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg); }
 
 /* ----------------------- NOSOTROS -------------------- */
 .nosotrosImagen figure {
