--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ body {
   box-sizing: border-box; }
 
 html {
-  font-size: 66.5%;
+  font-size: 65%;
   font-family: 'Glory', sans-serif; }
 
 li {
@@ -331,11 +331,13 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1.5rem; }
+  padding: 1rem 1.5rem;
+  height: 12rem; }
 
 .hamburger {
   display: none; }
 
+/* Barras opciones celular/ipad */
 .bar {
   display: block;
   width: 25px;
@@ -357,7 +359,7 @@ a {
   margin-left: 5rem; }
 
 .nav-link {
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 700;
   color: #3a3333 !important; }
 
@@ -372,7 +374,7 @@ a {
     flex-direction: column;
     background-color: #FFD25A;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 7px;
     text-align: center;
     transition: 0.3s;
     box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
