--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-size: 66.5%;
+  font-size: 65%;
   font-family: 'Glory', sans-serif;
 }
 
@@ -26,12 +26,14 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.5rem;
+  height: 12rem;
 }
 
 .hamburger {
   display: none;
 }
 
+/* Barras opciones celular/ipad */
 .bar {
   display: block;
   width: 25px;
@@ -57,7 +59,7 @@ a {
 }
 
 .nav-link{
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 700;
   color: #3a3333 !important;
 }
@@ -76,7 +78,7 @@ a {
       flex-direction: column;
       background-color: #FFD25A;
       width: 100%;
-      border-radius: 10px;
+      border-radius: 7px;
       text-align: center;
       transition: 0.3s;
       box-shadow:
