--- a/sass/index.scss
+++ b/sass/index.scss
@@ -47,3 +47,25 @@
   .carousel-inner {
     height: 47rem;
   }
+
+  @media only screen and (max-height: 900px) {
+    .carousel-inner {
+      height: 59.15rem;
+    }
+
+    .carouselImage {
+      width: 100%;
+      height: 59.37rem ;
+    }
+  }
+
+  @media only screen and (min-height: 950px) {
+    .carousel-inner {
+      height: 71.7rem;
+    }
+
+    .carouselImage {
+      width: 100%;
+      height: 71.7rem ;
+    }
+  }
