--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -33,6 +33,11 @@ a {
   display: none;
 }
 
+.logoPagina{
+  
+  width: 22rem;
+}
+
 /* Barras opciones celular/ipad */
 .bar {
   display: block;
@@ -44,7 +49,7 @@ a {
   background-color: #3a3333;
   z-index: 4;
   position: relative;
-  
+
 }
 
 .nav-menu {
@@ -112,3 +117,4 @@ a {
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
 }
+
