--- a/sass/index.scss
+++ b/sass/index.scss
@@ -48,6 +48,11 @@
     height: 47rem;
   }
 
+  .nuestrasHamburguesas {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
   @media only screen and (max-height: 900px) {
     .carousel-inner {
       height: 59.15rem;
