--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -6,8 +6,8 @@
 
 html {
   font-size: 65%;
-  font-family: 'Glory', sans-serif;
-}
+  font-family: 'Glory', sans-serif !important;
+} 
 
 li {
   list-style: none;
